core-talos/03-gitops/components/services/torrent/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: torrent
  annotations:
    lbipam.cilium.io/ips: 192.168.8.16
spec:
  type: LoadBalancer
  selector:
    app: torrent
  ports:
    - {name: qbittorrent, port: 8080, targetPort: qbittorrent}
    - {name: flood, port: 3000, targetPort: flood}
